# whats-for-lunch

./: Cargo.toml  Dockerfile  fly.toml
resources/test/: aastvej.html
src/: lunch.rs  main.rs  mattermost.rs
