[package]
name = "whats-for-lunch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
scraper = "0.17.1"
utoipa = "3.4.4"
serde_json = "1.0"
utoipa-swagger-ui = "3.1.5"
tide = "0.16.0"
env_logger = "0.10.0"
log = "0.4"
strum = { version = "0.25", features = ["derive"] }
async-std = { version = "1.12.0", features = ["attributes"] }
surf = "2.3.2"
