[package]
name = "whats-for-lunch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11" }
serde = { version = "1.0", features = ["derive"] }
scraper = "0.17.1"
utoipa = "3.4.4"
serde_json = "1.0"
log = "0.4"
strum = { version = "0.25", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
axum = { version = "0.6.20", features = ["tracing"] }
utoipa-rapidoc = { version = "0.1.0", features = ["axum"] }
anyhow = "1.0.75"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tower-http = { version = "0.4.3", features = ["trace"] }
tracing = "0.1.37"
