[package]
name = "whats-for-lunch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["tracing"] }
log = "0.4"
reqwest = { version = "0.11" }
scraper = "0.17.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25.2"
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.3", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
utoipa = "3.4.4"
utoipa-rapidoc = { version = "0.1.0", features = ["axum"] }
